# name: TestPushStatus.test[uvloop-None]
  <class 'dict'> {
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: TestPushStatus.test_bad_state[uvloop]
  <class 'dict'> {
    'errors': <class 'dict'> {
      'state': <class 'list'> [
        'unallowed value bad',
      ],
    },
    'id': 'invalid_input',
    'message': 'Invalid input',
  }
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_missing_error[uvloop]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Missing error information',
    },
  )
---
# name: TestPushStatus.test_name_and_description[uvloop]
  <class 'dict'> {
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: test_acquire[uvloop-None]
  <class 'dict'> {
    'acquired': True,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'key': 'key',
    'mem': 16,
    'proc': 10,
    'progress': 3,
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1.0,
        'stage': 'import_results',
        'state': 'complete',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
# name: test_cancel[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'mem': 16,
    'proc': 10,
    'progress': 0.091,
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
# name: test_find[uvloop]
  <class 'dict'> {
    'counts': <class 'dict'> {
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-06-16T10:04:35Z',
        'id': '4rwj2wvd',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2015-06-16T10:04:35Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1983-05-27T17:07:56Z',
        'id': 'paszioue',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1983-05-27T17:07:56Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1984-10-21T13:06:11Z',
        'id': 'dpjkhz7f',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1984-10-21T13:06:11Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2019-10-18T06:53:24Z',
        'id': 'ctifrate',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2019-10-18T06:53:24Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2009-02-10T14:51:16Z',
        'id': 'tzrgxnyn',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2009-02-10T14:51:16Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1990-05-15T04:47:53Z',
        'id': 'z4xcf2im',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1990-05-15T04:47:53Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1987-09-27T13:19:41Z',
        'id': 'elxnukhl',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1987-09-27T13:19:41Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2018-03-02T07:19:40Z',
        'id': '4s48h2ed',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2018-03-02T07:19:40Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2004-07-14T10:43:30Z',
        'id': 'pthm0rnt',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2004-07-14T10:43:30Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2003-01-28T07:22:47Z',
        'id': 'k9fgpos6',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2003-01-28T07:22:47Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1997-04-03T06:47:18Z',
        'id': 'q2z7tv9g',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1997-04-03T06:47:18Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2006-12-26T17:19:20Z',
        'id': 'hwhv85xa',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2006-12-26T17:19:20Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2001-06-24T08:39:06Z',
        'id': '012gy898',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2001-06-24T08:39:06Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1986-12-17T04:23:36Z',
        'id': 'bb0crr2j',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1986-12-17T04:23:36Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2018-02-28T22:26:05Z',
        'id': 'mtbb337l',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2018-02-28T22:26:05Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2012-01-24T14:40:39Z',
        'id': 'nwfgwd2a',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2012-01-24T14:40:39Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2000-06-11T19:44:13Z',
        'id': '56pw3ie9',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2000-06-11T19:44:13Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2011-09-24T04:27:49Z',
        'id': '8oypr9x2',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2011-09-24T04:27:49Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1978-08-26T15:36:27Z',
        'id': '51kta41r',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1978-08-26T15:36:27Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2007-12-04T05:43:14Z',
        'id': 'itdonm19',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2007-12-04T05:43:14Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1976-06-01T05:36:06Z',
        'id': 'gqoi8e9k',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1976-06-01T05:36:06Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2013-10-26T06:29:38Z',
        'id': 'g4vtbmzk',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2013-10-26T06:29:38Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '1971-09-01T10:26:25Z',
        'id': 'mtk7gmsj',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '1971-09-01T10:26:25Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2008-12-14T02:14:45Z',
        'id': 'cu4kdwqe',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2008-12-14T02:14:45Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'created_at': '2019-02-17T23:30:04Z',
        'id': 'p4u07ghp',
        'progress': 0,
        'rights': <class 'dict'> {
        },
        'stage': None,
        'state': 'waiting',
        'status': <class 'list'> [
          <class 'dict'> {
            'error': None,
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2019-02-17T23:30:04Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
    ],
    'found_count': 25,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 25,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'mem': 16,
    'proc': 10,
    'progress': 1.0,
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1.0,
        'stage': 'import_results',
        'state': 'complete',
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
